Remaining:
* Package the build properly for release on a Eclipse update site. Check into version management / auto-updates.

12/11/2011 - Improved logging to begin debugging mysterious crashes. Renamed package.

12/01/2011 - Support for jsonp for use with the Chrome extension (v1.1.0), though it turned out to be unnecessary.
 - New url parameter jsonp=y to trigger output as javascript instead of html "OK"

10/29/2011 - Added dialog to ask user which file to open in case of multiple hits. (v1.0.0)
 - New multiple hits choice dialog
 - Drastically simplifed search match logic and error handling
 - General code cleanup
 - Added dispose() coverage for button images

10/23/2011 - Added preferences and automatic server restart on change.  Added password. 
 - Added preferences panel as plain text. Currently sets port number, password required, password text, # recent files to list.
 - Added "Clear" button to blank out the recent open events tab.
 - Discovered secure storage approach was failing, need to fix that later; using plain text for now because it's reliable.
 - Added preference setting for Start listener on startup.

10/22/2011 - Fixed event table display problems.
 - Cleaned up formatting of Recent File Locations tab using a table layout.
 - Showed a message on each OpenEvent line that failed, showing the "Warning: Not found" message but clearing it if it works on reopen.
 - Messages field updates properly.
 - Tested that the listening service remains on once the view is closed (it does).

10/21/2011 - Basic functionality works.
 - Listener service starts and stops from green/red UI buttons (but port is hard-coded).
 - Http requests result in a correctly opened file and go to line number.  
 - Double clicking an open event line in the Recent File Locations view reopens that file.
 - Plugin installs as a drop-in jar on Eclipse Indigo.
